k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  namespace: devops-demo
spec:
  type: NodePort
  selector:
    app: devops-demo
  ports:
    - port: 8080
      targetPort: http
      nodePort: 30080
